finished with user stories, needs better design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1><i class="fab fa-twitch"></i> Twitch TV App</h1>
   </header>
   <section class="buttonsWrapper">
-    <button id="allBtn">All</button>
+    <button class="active" id="allBtn">All</button>
     <button id="onlineBtn">Online</button>
     <button id="offlineBtn">Offline</button>
   </section>
