--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <title>Twitch TV App - by Beinnor</title>
@@ -14,7 +15,8 @@
 
 <body>
   <header>
-    <h1><i class="fab fa-twitch"></i> Twitch TV App</h1>
+    <h1>
+      <i class="fab fa-twitch"></i> Twitch TV App</h1>
   </header>
   <section class="buttonsWrapper">
     <button class="active" id="allBtn">All</button>
@@ -26,7 +28,7 @@
   </section>
   <footer>
     <p>A
-      <a class="link" href="https://www.freecodecamp.org/challenges/build-a-wikipedia-viewer">freeCodeCamp</a> project by
+      <a class="link" href="https://www.freecodecamp.org/">freeCodeCamp</a> project by
       <a class="link" href="http://beinnor.github.io/">Beinnor</a> 2018
     </p>
   </footer>
